# claude-sdk-lite

./: .gitignore  DOCS.md  LICENSE  README.md  pyproject.toml
examples/: basic_async_usage.py  basic_usage.py  simple_async_chat.py  simple_chat.py
scripts/: README.md  format-python.sh  publish.sh
src/claude_sdk_lite/: __init__.py  async_persistent_executor.py  client.py  exceptions.py  executors.py  message_handler.py  message_parser.py  options.py  persistent_executor.py  query.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_async_client.py  test_async_persistent_executor.py  test_async_query.py  test_client.py  test_client_integration.py  test_echo_mode.py  test_executors.py  test_helpers.py  test_message_parser.py  test_options.py  test_persistent_executor.py  test_query.py  test_types.py  test_utils.py
