[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-sdk-lite"
version = "0.2.0"
description = "A lightweight Python SDK for Claude Code CLI using subprocess"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Claude SDK Lite Contributors" }
]
keywords = [
    "claude",
    "claude-code",
    "anthropic",
    "ai",
    "sdk",
    "subprocess",
    "lightweight"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    # Code formatting tools
    "autoflake>=2.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=7.0.0",
    "build>=1.4.0",
    "twine>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/claude-sdk-lite"
Documentation = "https://github.com/yourusername/claude-sdk-lite#readme"
Repository = "https://github.com/yourusername/claude-sdk-lite"
Issues = "https://github.com/yourusername/claude-sdk-lite/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sdk_lite"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
